name:                refluhs
version:             0.1.0.0
synopsis:            react-flux demo
description:         react-flux demonstration project
homepage:            https://github.com/astynax/refluhs#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksey Pirogov
maintainer:          astynax84@gmail.com
copyright:           Aleksey Pirogov aka astynax
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable refluhs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       ClickMeOptical
                     , ClickMeStateful
                     , ClickMeStoreful
                     , Element
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , deepseq
                     , react-flux
                     , text
